18 Sep 2003 mipsator
 * improved str_to_dynary() to init and return dynary structure.
 * updated use of str_to_dynary in func, funtool, pmk and pmksetup.
 * changed syntax of path variables in pmk configuration file.
 * updated func.c to match with new PATH_* variables but kept the
	compatibility with old format.
 * added warnings for obsolete variables in both pmk and pmksetup.
 * updated pmk.conf.5 to match with PATH_* variables.
 * fixed parse_pmkconf() to take care of comment and blank lines as
 * fixed pmk to take care of parse_pmkconf() changes.
 * fixed pmksetup to keep comments and blank lines when updating
	the configuration file.
 * rewritten predef_vars() in pmksetup (i feel better like that :).
 * updated pmk.conf sample.
 * added pkg-config detection in pmksetup.
 * updated pmk_check_pkg_config() to use BIN_PKGCONFIG if provided.

15 Sep 2003 mipsator
 * removed useless parse_conf_line() in common.
 * added function comments that were missing.

14 Sep 2003 mipsator
 * made Makefile more portable.

# snapshot 0.6.3

14 Sep 2003 mipsator
 * finished global language support.
 * fixed parsing of bool data in compatibility mode.
 * added parse_pmkconf(), a common configuration file parser (pmk.conf).
 * added process_opt() and modified pmk to use parse_pmkconf().
 * removed read_conf() which is now useless in pmk.
 * added check_opt() and modified pmksetup to use parse_pmkconf().
 * removed parse_conf() which is now useless in pmksetup.
 * updated pmkfile.5 and pmk.conf.5 man pages.
 * updated override file sample.

13 Sep 2003 mipsator
 * added dumping of pmk.conf in test_pmksetup target of Makefile.
 * added parse_obsolete() for pmk.conf compatibility with old format.
 * modified parse_opt() to check a list of operator instead of
	'=' by default. This permit to use it from pmksetup and pmk.
 * updated read_conf() and parse_conf() to use parse_opt().
 * defined write format for pmk.conf in pmksetup.h
	(see PMKSTP_WRITE_FORMAT).

11 Sep 2003 mipsator